# slang

./: .clang-format  CMakeLists.txt  README.md
docs/: README.md  closures.md  instructions.md  other.md  refcounting.md  syntax.md
src/: ast.cpp  ast.hpp  ast_core.cpp  ast_core.hpp  ast_expr.cpp  ast_expr.hpp  ast_macros.hpp  ast_pure_expr.cpp  ast_pure_expr.hpp  ast_stmt.cpp  ast_stmt.hpp  ast_type.cpp  ast_type.hpp  chunk.cpp  chunk.hpp  compile_context.cpp  compile_context.hpp  compiler.cpp  compiler.hpp  error.cpp  error.hpp  main.cpp  native.cpp  native.hpp  new_delete.cpp  object.cpp  object.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  types.cpp  types.hpp  upvalue.cpp  upvalue.hpp  value.hpp  vm.cpp  vm.hpp
test/: .gitignore  main.py
test/aliases/: block_scope.sl  mutual_recursion.sl
test/arithmetic/: inplace.sl  precedence.sl  precedence1.sl  precedence2.sl  precedence3.sl  precedence4.sl  pythagoras.sl  simple.sl
test/arrays/: basic_read_write.sl  object_elements.sl  object_overwrite_retain.sl  out_of_bounds.sl
test/casts/: alias.sl  boolean.sl  chained.sl  err_chain_to_str.sl  err_function_cast.sl  err_str_to_fixed.sl  numeric.sl  precedence.sl  to_string.sl
test/closures/: adders.sl  blocks.sl  blocks2.sl  blocks3.sl  ci1.sl  ci2.sl  ci_devious.sl  conditional_closure.sl  conditional_closure2.sl  over_for_loop.sl  over_while_loop.sl  overwrite.sl  recursion.sl  repeat_capturing_already_captured.sl  simple_read.sl  simple_write.sl  two_captures.sl  weird_leak.sl
test/comparisons/: float_compare.sl  gt_ge.sl  neq.sl
test/errors/: alias_out_of_scope.sl  array_assignment_type_mismatch.sl  array_index_invalid_type.sl  array_literal_type_mismatch.sl  compare_bool.sl  func_init.sl  infer_none.sl  invalid_assignment_target.sl  leak_on_error1.sl  leak_on_error2.sl  leak_on_modify_self.sl  not_non_bool.sl  or_non_bool.sl  return_outside_function.sl  shadow_native.sl  shadow_self.sl  shadow_self1.sl  shadow_self2.sl  str_init.sl  str_no_none.sl  ternary_incompatible_branches.sl  undefined_variable.sl  unreachable_after_return.sl  wrong_arg_count.sl  wrong_arg_type.sl  wrong_return_type.sl
test/float/: arithmetic.sl  float_division.sl  int_division.sl  literals.sl  mixed.sl
test/flow/: else_if.sl  for.sl  for_expr_initializer_single_stmt.sl  for_no_init_no_increment.sl  if-else.sl  if.sl  nested_for.sl  nested_loops.sl  while.sl
test/functions/: basic.sl  call_null.sl  explicit_return_none.sl  fn_inside1.sl  fn_inside2.sl  iife_return.sl  modify_self.sl  modify_self1.sl  modify_self2.sl  multi_arg.sl  no_init.sl  no_return.sl  obj_inside.sl  recursion.sl  return_fn.sl  return_fn_with_arg.sl  return_fn_with_object.sl  return_local_object.sl  return_obj_with_arg.sl  reverse_print.sl  str_inside1.sl  str_inside2.sl
test/general/: hello_world.sl  register_implace.sl  variable_shadow.sl
test/logic/: no_bools.sl  shortcircuit.sl  shortcircuit1.sl  shortcircuit2.sl  shortcircuit3.sl  shortcircuit4.sl
test/objects/: free_functions.sl  free_functions2.sl  free_strings.sl  free_strings2.sl  set_none.sl
test/ternary/: basic.sl  objects.sl
test/type/: bad_recursion.sl  custom_basic.sl  decl_in_top.sl  decl_outside_top.sl  nested.sl
test/weird/: infinite_registers.sl  str1.sl
